syntax = "proto3";
import "google/protobuf/empty.proto";

package controller_notify;

service ControllerNotifyService {
    rpc NotifyPlaceOrders(stream StreamNewOrders) returns (stream StreamNewOrdersResponse);
    rpc AutoCancelOrders(AutoCancelOrdersProposal) returns (google.protobuf.Empty)
}

message NewOrderProposal {
    uint32 exchange_id = 1;
    uint32 market_id = 2;
    int64 size = 3;
    int64 price = 4;
}

message NewOrdersProposal {
    repeated NewOrderProposal base_orders = 1;
    repeated NewOrderProposal hedge_orders = 2;
    bool hedge_by_filled_market = 3;
    uint32 hedge_exchange_id = 4;
    int64 max_spread = 5;
}

message CancelOrdersProposal {
    int64 min_price_buy = 1;
    int64 max_price_sell = 2;
    uint32 exchange_id = 3;
}

message AutoCancelOrdersProposal {
    uint32 exchange_id = 1;
    uint64 countdown_time = 2;
    int64 event_timestamp = 3;
}

message HandleOrdersProposal {
    NewOrdersProposal new_orders = 1;
    repeated CancelOrdersProposal cancel_orders = 2;
    int64 event_timestamp = 3;
}

message StreamProposal {
    oneof payload {
        HandleOrdersProposal handle_order_proposal = 1;
        AutoCancelOrdersProposal auto_cancel_orders_proposal = 2;
    }
}

message StreamProposalResponse {
    uint64 counter = 1;
}